# Rivet

./: .gitignore  README.md  \
assets/: rivet_unicode_logo.rs
rivet/: Cargo.toml
rivet/plans/: sidebar-row-paths.md
rivet/src/: main.rs  subcommands.rs
rivet/src/actions/: add_action.rs  check_rivet.rs  init_action.rs  ls_action.rs  mod.rs  remove_action.rs  request_path.rs  send_action.rs
rivet/src/cli/: ls_command.rs  mod.rs  print_table.rs
rivet/src/clicommands/: send_command.rs
rivet/src/subcommands/: add_command.rs  check_rivet.rs  init_command.rs  ls_command.rs  print_table.rs  remove_command.rs  send_command.rs
rivet/src/tui/: api_config_ui.rs  help_section_ui.rs  main_logic.rs  mod.rs  response_ui.rs  sidebar_ui.rs
rivet/src/types/: api_response.rs  mod.rs  request_type.rs
