[package]
name = "rivet"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
comfy-table = "7.2.2"
owo-colors = "4.3.0"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
termtree = "1.0.0"
toml = "1.1.2"
